--- a/.github/workflows/update_social_data.yml
+++ b/.github/workflows/update_social_data.yml
@@ -2,7 +2,7 @@ name: Update Social Media Counts
 
 on:
   schedule:
-    - cron: '0 */6 * * *'  # Run every 6 hours
+    - cron: '0 0 * * *'  # Run every 24 hours
   workflow_dispatch:  # Allow manual trigger
 
 jobs:
