--- a/.github/workflows/update_social_data.yml
+++ b/.github/workflows/update_social_data.yml
@@ -35,6 +35,6 @@ jobs:
       run: |
         git config --global user.name 'GitHub Actions Bot'
         git config --global user.email 'actions@github.com'
-        git add social_data.json
+        git add .
         git diff --quiet && git diff --staged --quiet || git commit -m "Update social media stats"
         git push
