--- a/.github/workflows/update_social_data.yml
+++ b/.github/workflows/update_social_data.yml
@@ -27,6 +27,7 @@ jobs:
       env:
         TWITTER_USER_ID: ${{ secrets.TWITTER_USER_ID }}
         TWITTER_BEARER_TOKEN: ${{ secrets.TWITTER_BEARER_TOKEN }}
+        TWITTER_USERNAME: ${{ secrets.TWITTER_USERNAME }}
         INSTAGRAM_USER_ID: ${{ secrets.INSTAGRAM_USER_ID }}
         INSTAGRAM_ACCESS_TOKEN: ${{ secrets.INSTAGRAM_ACCESS_TOKEN }}
       run: python social_fetcher.py
