--- a/.github/workflows/update_social_data.yml
+++ b/.github/workflows/update_social_data.yml
@@ -34,8 +34,9 @@ jobs:
       
     - name: Commit and push if changes
       run: |
-        git config --global user.name 'GitHub Actions Bot'
-        git config --global user.email 'actions@github.com'
+        git config --global user.name 'github-actions[bot]'
+        git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
+        cd src
         git add .
         git diff --quiet && git diff --staged --quiet || git commit -m "Update social media stats"
         git push
