--- a/.github/workflows/update_social_data.yml
+++ b/.github/workflows/update_social_data.yml
@@ -39,4 +39,4 @@ jobs:
         cd src
         git add .
         git diff --quiet && git diff --staged --quiet || git commit -m "Update social media stats"
-        git push
+        git push origin HEAD:gh-pages
