--- a/.github/workflows/update_social_data.yml
+++ b/.github/workflows/update_social_data.yml
@@ -1,28 +1,29 @@
-name: Update Social Media Counts
+name: Update Social Media Counts and Deploy to Pages
 
 on:
   schedule:
     - cron: '0 0 * * *'  # Run every 24 hours
-  workflow_dispatch:  # Allow manual trigger
+  workflow_dispatch:  # Allow manual triggers
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
   update-social-data:
     runs-on: ubuntu-latest
-    
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
-      
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
-        
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install requests
-        
     - name: Run social media fetcher
       env:
         TWITTER_USER_ID: ${{ secrets.TWITTER_USER_ID }}
@@ -31,7 +32,6 @@ jobs:
         INSTAGRAM_USER_ID: ${{ secrets.INSTAGRAM_USER_ID }}
         INSTAGRAM_ACCESS_TOKEN: ${{ secrets.INSTAGRAM_ACCESS_TOKEN }}
       run: python social_fetcher.py
-      
     - name: Commit and push if changes
       run: |
         git config --global user.name 'github-actions[bot]'
@@ -40,3 +40,22 @@ jobs:
         git add .
         git diff --quiet && git diff --staged --quiet || git commit -m "Update social media stats"
         git push
+
+  deploy:
+    needs: update-social-data
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: 'src/'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
