--- a/.github/workflows/update_social_data.yml
+++ b/.github/workflows/update_social_data.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:  # Allow manual triggers
 
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
 
